--- a/data_processing/requirements.txt
+++ b/data_processing/requirements.txt
@@ -42,7 +42,9 @@ pyproj==3.7.0
 pyquaternion==0.9.9
 python-dateutil==2.9.0.post0
 pytz==2024.2
+PyWavefront==1.3.3
 PyYAML==6.0.2
+rasterio==1.3.10
 referencing==0.35.1
 requests==2.32.3
 retrying==1.3.4
@@ -51,6 +53,7 @@ scikit-learn==1.5.2
 scipy==1.14.1
 shapely==2.0.6
 six==1.16.0
+trimesh==4.5.3
 tenacity==9.0.0
 threadpoolctl==3.5.0
 tqdm==4.67.0
